--- a/Share Beauty App/Views/LX/LXGraphView.xib
+++ b/Share Beauty App/Views/LX/LXGraphView.xib
@@ -54,6 +54,7 @@
                         <userDefinedRuntimeAttribute type="number" keyPath="titleLabel.numberOfLines">
                             <integer key="value" value="0"/>
                         </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="titleLabel.adjustsFontSizeToFitWidth" value="YES"/>
                     </userDefinedRuntimeAttributes>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4lK-xn-rvw">
@@ -68,6 +69,7 @@
                         <userDefinedRuntimeAttribute type="number" keyPath="titleLabel.numberOfLines">
                             <integer key="value" value="0"/>
                         </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="titleLabel.adjustsFontSizeToFitWidth" value="YES"/>
                     </userDefinedRuntimeAttributes>
                 </button>
             </subviews>
